Fixed the blue color on iOS

--- a/style.css
+++ b/style.css
@@ -92,6 +92,7 @@ a {
     display: grid;
     grid-template-columns: 2fr 1fr;
     width: 100%;
+    color: black;
 }
 
 .clear {
@@ -134,6 +135,7 @@ a {
     display: grid;
     grid-template-columns: 2fr 1fr;
     grid-area: bottom-zero-dot;
+    color: black;
 }
 
 .zero {
